Correção de texto

--- a/homesite/templates/home.html
+++ b/homesite/templates/home.html
@@ -149,7 +149,7 @@
                         </div>
                         <div class="icon-box-cell">
                             <label class="text-m">Energia</label>
-                            <p class="text-s">Sol, óleo e gás</p>
+                            <p class="text-s">Sol, óleo e gás!</p>
                         </div>
                     </div>
                 </div>
