Atualização de HTML

--- a/homesite/templates/home.html
+++ b/homesite/templates/home.html
@@ -71,7 +71,7 @@
             </div>
         </div>
     </header>
-    <div id="topo" class="section-bg-image parallax-window white ken-burn-center" data-natural-height="1080" data-natural-width="1920" data-parallax="scroll" data-image-src="{% static 'images/hd-4.jpg' %}">
+    <div id="topo" class="section-bg-image parallax-window white ken-burn-center" data-natural-height="1080" data-natural-width="1920" data-parallax="scroll" style="background-color:#000000a1;" data-image-src="{% static 'images/hd-4.jpg' %}">
         <div class="container content">
             <hr class="space" />
             <hr class="space" />
@@ -159,7 +159,7 @@
 
     <div id="sobre" class="section-empty">
             <div class="container content">
-                <h2 class="text-center text-left-xs">Nós trabalhamos para tornar mais fácil para as organizações trabalharem e crescerem em uma escala internacional</h2>
+                <h2 class="text-center text-left-xs">Segurança, experiência e credibilidade na edificação dos seus sonhos</h2>
                 <hr class="space" />
                 <div class="row">
                     <div class="col-md-4">
@@ -274,7 +274,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 text-center text-left-xs">
-                        <a class="btn btn-lg btn-icon" href="#!">
+                        <a class="btn btn-lg btn-icon" target="_blank" href="https://api.whatsapp.com/send?1=pt_BR&phone=5538984216274">
                             <i class="fa im-play"></i>FALAR COM CONSULTOR</a>
                     <!-- <a href="#" class="btn btn-border btn-lg">Entrar em contato com consultor</a> -->
                 </div>
@@ -706,19 +706,19 @@
                 </div>
                 <div class="col-md-6 col-sm-12 boxed-inverse">
                     <ul class="list-texts list-texts-justified">
-                        <li><b>Address:</b> <span>Sturlly Technologies, PO Box 16122, London</span></li>
-                        <li><b>Offices:</b> <span>Studio Massimo, PO Box 16120, Street</span></li>
-                        <li><b>Skype:</b> <span>company.name</span></li>
-                        <li><b>Phones:</b> <span>(123) 0 123 455669 |  (123) 0 123 455600</span></li>
-                        <li><b>Emails:</b> <span>info@example.com | sales@example.com</span></li>
+                        <li><b>Endereço:</b> <span>R. Dr. Veloso, 760 - Centro, 39400-074</span></li>
+                        <li><b>Cidade:</b> <span>Montes Claros - Minas Gerais</span></li>
+                        <li><b>WhatsApp:</b> <span>(38) 98888-7777</span></li>
+                        <li><b>Phones:</b> <span>(38) 3214-0930 |  (38) 3214-0930</span></li>
+                        <li><b>Emails:</b> <span>contatoo@dakota.com.br | vendas@dakota.com.br</span></li>
                     </ul>
                     <hr class="space m" />
                     <table class="grid-table border-table text-left">
                         <tbody>
                             <tr>
-                                <td><a href="#" class="btn-border btn btn-xs">Marketing</a></td>
-                                <td><a href="#" class="btn-border btn btn-xs">Press area</a></td>
-                                <td><a href="#" class="btn-border btn btn-xs">Support</a></td>
+                                <td><a href="#" class="btn-border btn btn-xs">Vendas</a></td>
+                                <td><a href="#" class="btn-border btn btn-xs">Financeiro</a></td>
+                                <td><a href="#" class="btn-border btn btn-xs">Suporte</a></td>
                             </tr>
                         </tbody>
                     </table>
