--- a/homesite/templates/home.html
+++ b/homesite/templates/home.html
@@ -222,16 +222,16 @@
                                 <li>Produtos renováveis do zero</li>
                             </ul>
                             <hr class="space l" />
-                            <a href="../index-construction.html/empreendimentos.html" class="btn btn-sm">Sobre Nossos Empreendimentos</a>
+                            <a href="https://api.whatsapp.com/send?phone=5538992401155&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20um%20consultor%20sobre%20o%20empreendimento" class="btn btn-sm">Sobre Nossos Empreendimentos</a>
                             <hr class="space visible-xs" />
                         </div>
                         <div class="col-md-3">
-                            <a class="img-box thumbnail lightbox row-12" data-lightbox-anima="fade-left" href="https://static.wixstatic.com/media/b8d4bf_13ba02d76c324ab78b849dabddd12132~mv2_d_4928_6938_s_4_2.jpg/v1/fill/w_593,h_835,al_c,q_85,usm_0.66_1.00_0.01/b8d4bf_13ba02d76c324ab78b849dabddd12132~mv2_d_4928_6938_s_4_2.webp">
-                                <span><img src="https://static.wixstatic.com/media/b8d4bf_13ba02d76c324ab78b849dabddd12132~mv2_d_4928_6938_s_4_2.jpg/v1/fill/w_593,h_835,al_c,q_85,usm_0.66_1.00_0.01/b8d4bf_13ba02d76c324ab78b849dabddd12132~mv2_d_4928_6938_s_4_2.webp" alt=""></span>
+                            <a class="img-box thumbnail lightbox row-12" data-lightbox-anima="fade-left" href="{% static 'images/mobi-tower.jpg' %}">
+                                <span><img src="{% static 'images/mobi-tower.jpg' %}" alt=""></span>
                             </a>
                         </div>
                         <div class="col-md-3 hidden-sm">
-                            <a class="img-box thumbnail lightbox row-12" data-lightbox-anima="fade-left" href="../images/green-2.jpg">
+                            <a class="img-box thumbnail lightbox row-12" data-lightbox-anima="fade-left" href=" {% static 'images/green-2.jpg' %}">
                                 <span><img src="{% static 'images/gallery/image-7.jpg' %}" alt=""></span>
                             </a>
                         </div>
